# pydeflate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
compressors/: __init__.py  deflate.py  huffman.py  integer.py  lz77.py
compressors/helpers/: block_splitter.py
tests/: test_compressor.py
